--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -29,11 +29,10 @@
 //   align-items: center;
 // }
 
-// .nav {
-//   flex: 4;
-//   display: flex;
-//   margin-left: 10rem;
-// }
+.nav {
+  display: flex;
+  padding-block: 2rem;
+}
 
 // .nav-links {
 //   flex: 2;
