--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,14 +1,13 @@
 $breakpoints: (
-    md: 48rem,
-    lg: 62.5rem,
-    xs: 430px,
-    xxl: 87.5rem
+  md: 48rem,
+  lg: 62.5rem,
+  desktop: 90rem,
 );
 
 @mixin mq($key) {
-    $size: map-get($breakpoints, $key);
+  $size: map-get($breakpoints, $key);
 
-    @media only screen and (min-width: $size) {
-        @content;
-    }
+  @media only screen and (min-width: $size) {
+    @content;
+  }
 }
