--- a/src/sass/base/_root.scss
+++ b/src/sass/base/_root.scss
@@ -1,7 +1,20 @@
 :root {
-  --def-font-size: 1rem;
+  // font variables
+  --def-fs: 1.125rem;
+  --def-ff: 'Poppins', sans-serif;
+  // primary colors
+  --blue-primary: hsl(180, 66%, 49%);
+  --dark--primary: hsl(257, 27%, 26%);
+
+  // secondary colors
+  --red-secondary: hsl(0, 87%, 67%);
+  // neutral colors
+  --ntr-gray: hsl(0, 0%, 75%);
+  --ntr-violet: hsl(257, 7%, 63%);
+  --ntr-dark-blue: hsl(255, 11%, 22%);
+  --ntr-dark-violet: hsl(260, 8%, 14%);
+  // utility colors
   --white: hsl(0, 0%, 100%);
   --black: hsl(0, 0%, 0%);
-  --gray: #4b4741;
   --light: #f3f1ed;
 }
