--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,31 +1,39 @@
 @use '../abstracts/mixins' as *;
 @use '../base/root' as *;
 
+$primary-blue: hsl(180, 66%, 49%);
+
 .btn {
-  display: block;
   border-radius: 0;
   border: none;
-  font-family: 'Raleway', sans-serif;
-  text-transform: uppercase;
+  text-transform: capitalize;
   cursor: pointer;
   touch-action: manipulation;
   font-weight: 700;
   text-align: center;
   &:hover,
   &:focus {
-    color: #333;
     text-decoration: none;
   }
 
   &-primary {
-    background-color: var(--color-gold);
-    width: 100%;
-    display: block;
-    color: #333;
+    background-color: var(--blue-primary);
+    max-width: 25ch;
+    border-radius: 40px;
+    padding: 0.75em 1.5em;
+    color: var(--white);
     &:hover,
     &:focus {
-      background-color: var(--dark-gold);
+      background-color: lighten($primary-blue, 15%);
       border-color: var(--dark-gold);
     }
+  }
+  &-shortener {
+    max-width: 100%;
+    border-radius: 5px;
+  }
+  &-link {
+    padding: 10px 1rem;
+    border-radius: 3px;
   }
 }
