Components styles changed,little bit :d

--- a/src/sass/components/_link.scss
+++ b/src/sass/components/_link.scss
@@ -10,4 +10,7 @@
     color: var(--blue-primary);
     text-decoration: none;
   }
+  .short-link:hover {
+    color: var(--ntr-dark-violet);
+  }
 }
