--- a/src/module.scss
+++ b/src/module.scss
@@ -7,6 +7,7 @@
 @use 'sass/components/buttons';
 @use 'sass/components/link';
 @use 'sass/components/banner';
+@use 'sass/components/card';
 // input layouts
 @use 'sass/layout/navbar';
 @use 'sass/layout/intro';
