--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,7 +6,7 @@ body {
   font-family: var(--def-ff);
   @include mq(lg) {
     & {
-      font-size: calc(var(--def-fs) + 0.5rem);
+      // font-size: calc(var(--def-fs) + 0.5rem);
     }
   }
 }
