--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -1,3 +1,6 @@
+@use '../base/root' as *;
+@use '../abstracts/mixins' as *;
+
 .banner-container {
   background: var(--dark--primary) url(../../images/bg-boost-mobile.svg)
     no-repeat;
@@ -9,5 +12,16 @@
 
   h2 {
     margin-bottom: 2rem;
+
+    @include mq(md) {
+      font-size: 2rem;
+    }
+    @include mq(lg) {
+      font-size: 2.25rem;
+    }
+
+    @include mq(laptop) {
+      font-size: 2.75rem;
+    }
   }
 }
