--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,10 +1,29 @@
-.s {
+@use '../base/root' as *;
+@use '../abstracts/mixins' as *;
+
+.card-wrapper {
   position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 3rem;
+  // justify-content: center;
+
+  @include mq(lg) {
+    align-items: flex-start;
+    img {
+      margin-left: 2rem;
+    }
+    @include mq(laptop) {
+      max-width: 80%;
+    }
+  }
+}
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-auto-columns: 1fr;
+  grid-gap: 30px;
+  margin: 0 auto;
 }
 
 .card {
@@ -12,20 +31,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  grid-gap: 30px;
+  gap: 20px;
   margin-block: 30px;
   background-color: var(--white);
   padding: 3rem 1rem;
   border-radius: 6px;
   position: relative;
   z-index: 1;
+  max-width: 50ch;
+  height: 100%;
+  @include mq(lg) {
+    text-align: left;
+    align-items: flex-start;
+  }
+
   &-header {
     font-size: 1.5rem;
   }
+
   &-article {
     color: var(--ntr-dark-blue);
     font-weight: 300;
+    @include mq(md) {
+      line-height: 1.7;
+    }
   }
+
   &-image {
     background-color: var(--ntr-dark-blue);
     padding: 1rem;
