--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -10,59 +10,48 @@
 //   z-index: 1000;
 // }
 
-// .section {
-//   height: calc(100vh - 3rem);
-//   width: 100%;
-// }
-// .container-navbar {
-//   max-width: 65rem;
-//   padding: 1rem 2rem;
-//   margin: 0 auto;
-//   display: flex;
-//   position: relative;
-// }
-
-// //// navigation ////
-// .logo-container {
-//   flex: 1;
-//   display: flex;
-//   align-items: center;
-// }
-
 .nav {
   display: flex;
-  padding-block: 2rem;
+  padding-block: 1.5rem;
+  align-items: center;
+
+  &-list {
+    top: 0;
+    right: 100%;
+    bottom: 0;
+    position: fixed;
+    display: flex;
+
+    @include mq(md) {
+      width: auto;
+      position: static;
+      align-items: center;
+    }
+    &__secondary {
+      margin-left: auto;
+    }
+
+    &__button {
+      margin-left: 1rem;
+      padding: 5px 1rem;
+      text-align: center;
+    }
+    a {
+      color: var(--ntr-violet);
+      text-decoration: none;
+      font-size: 1.125rem;
+      font-weight: bold;
+
+      &:hover {
+        color: var(--ntr-dark-violet);
+      }
+    }
+  }
+  li {
+    list-style: none;
+
+    &:not(:first-child) {
+      margin-left: 2rem;
+    }
+  }
 }
-
-// .nav-links {
-//   flex: 2;
-// }
-// .nav-links > ul {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
-
-// .nav-item {
-//   position: relative;
-//   text-transform: uppercase;
-// }
-// .nav-link {
-//   font-weight: 700;
-//   line-height: 3rem;
-//   color: #fff;
-//   padding: 0 0.8rem;
-//   letter-spacing: 1px;
-//   font-size: 13px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-
-//   i {
-//     margin-left: 0.3rem;
-//   }
-
-//   &:hover {
-//     color: #f9c56a;
-//   }
-// }
