--- a/src/sass/utilities/_utilities.scss
+++ b/src/sass/utilities/_utilities.scss
@@ -8,7 +8,7 @@
   position: relative;
   // background-color: coral;
   @include mq(md) {
-    width: 85%;
+    max-width: 1440px;
   }
 }
 section {
@@ -42,7 +42,7 @@ section {
   font-size: 1.125rem;
 }
 .text-white {
-  color: var(--white);
+  color: var(--white) !important;
 }
 .pt-5 {
   padding-top: 4rem;
