--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,11 +4,6 @@
 body {
   font-size: var(--def-fs);
   font-family: var(--def-ff);
-  @include mq(lg) {
-    & {
-      // font-size: calc(var(--def-fs) + 0.5rem);
-    }
-  }
 }
 
 html {
@@ -23,4 +18,7 @@ html {
 }
 .hero {
   background-color: var(--light);
+}
+section {
+  margin-bottom: 8rem;
 }
