Some stylings changed in Link component

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -38,6 +38,7 @@ $primary-blue: hsl(180, 66%, 49%);
   &-link {
     padding: 10px 1rem;
     border-radius: 3px;
-    margin-left: 2rem;
+    // margin-left: 2rem;
+    // max-width: 100%;
   }
 }
