Link component styling changed

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,4 +1,5 @@
 $breakpoints: (
+  phone: 768px,
   md: 48rem,
   lg: 62.5rem,
   laptop: 75rem,
@@ -9,6 +10,14 @@ $breakpoints: (
   $size: map-get($breakpoints, $key);
 
   @media only screen and (min-width: $size) {
+    @content;
+  }
+}
+
+@mixin until($key) {
+  $size: map-get($breakpoints, $key);
+
+  @media only screen and (max-width: $size) {
     @content;
   }
 }
