empty link styling commented out for now

--- a/src/sass/layout/_shortener.scss
+++ b/src/sass/layout/_shortener.scss
@@ -53,15 +53,15 @@
   }
 }
 
-.shortener-input:invalid[focused='true'] {
-  border: 2px solid var(--red-secondary);
-}
+// .shortener-input:invalid[focused='true'] {
+//   border: 2px solid var(--red-secondary);
+// }
 
 .shortener-input:invalid[focused='true'] ~ .error-message {
   display: block;
 }
-.shortener-input:invalid[focused='true'] {
-  &::-moz-placeholder {
-    color: var(--red-secondary);
-  }
-}
+// .shortener-input:invalid[focused='true'] {
+//   &::-moz-placeholder {
+//     color: var(--red-secondary);
+//   }
+// }
