--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -40,9 +40,15 @@ $primary-blue: hsl(180, 66%, 49%);
     max-width: 100%;
     margin-top: 1rem;
     @include mq(lg) {
-      // margin: 0 0 0 2rem;
       margin-left: 2rem;
       margin-top: 0;
     }
+  }
+}
+button[disabled] {
+  background-color: var(--ntr-gray);
+
+  &:hover {
+    background-color: var(--ntr-violet);
   }
 }
